--- a/EvolutionaryJourney.uproject
+++ b/EvolutionaryJourney.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "EvolutionaryJourney",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"UMG"
+			]
 		}
 	],
 	"Plugins": [
@@ -19,6 +22,5 @@
 			"Name": "VisualStudioTools",
 			"Enabled": false
 		}
-
 	]
 }
