--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,10 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=4C4780704E70C0AFAC39EDB583552C45
+ProjectName=Evolutionary Journey
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "9EDCE48D4C0992581FA634A89646BE38", "Evolutionary Journey")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+bCookMapsOnly=True
+
