--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@ Content/** filter=lfs diff=lfs merge=lfs -text
 .uasset filter=lfs diff=lfs merge=lfs -text
 *.uasset filter=lfs diff=lfs merge=lfs -text
 *.umap filter=lfs diff=lfs merge=lfs -text
+*.log filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
