--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Level1.Level1
+GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
 EditorStartupMap=/Game/Maps/DefaultTestLevel.DefaultTestLevel
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
