Added game over and pause menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
 EditorStartupMap=/Game/Maps/DefaultTestLevel.DefaultTestLevel
+GameInstanceClass=/Game/Maps/BP_PlayerGameInstance.BP_PlayerGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
